[package]
name = "bevy_crossterm"
version = "0.7.0"
authors = ["Chris Yealy <christopherjyealy@gmail.com>"]
description = "Develop terminal games with crossterm and Bevy"
repository = "https://github.com/octotep/bevy_crossterm/"
license = "MIT"
edition = "2018"
resolver = "2"

[dependencies]
anyhow = "1.0"
bevy = { version = "0.7", default-features = false }
bitflags = "1.2"
broccoli = "1.2.5"
crossterm = { version = "0.22", features = ["serde"] }
ron = "0.7"
serde = { version = "1.0", features = ["derive"] }
unicode-segmentation = "1.7"

[dev-dependencies]
bevy = { version = "0.7", default-features = false, features = ["filesystem_watcher"] }
ron = "0.7"
textwrap = "0.13.1"

[[example]]
name = "window"
